# test-mpv.rs

libmpv-rs/: Cargo.toml
libmpv-rs/libmpv-sys/: build.rs
libmpv-rs/src/: mpv.rs
libmpv-rs/src/mpv/: events.rs  render.rs
mpv-rs/: Cargo.toml
mpv-rs/src/: main.rs
tauri-app/: package-lock.json  vite.config.ts.timestamp-1681591418493.mjs
tauri-app/src/: App.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src-tauri/src/player/: mod.rs  mpv.rs
